# mlship

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  binary.meta.json  docker-compose.yml  image.meta.json  image.pt  model.meta.json  model.model  pyproject.toml  requirements.txt  setup.py  test_model.py
kubernetes/: deployment.yaml  service.yaml
scripts/: create_example_models.py  create_test_models.py  generate_test_models.py
src/mlship/: __init__.py  cli.py  server.py  wrapper.py
src/mlship/cloud/: aws.py  azure.py  gcp.py
src/mlship/config/: cloud_config.py
src/mlship/models/: __init__.py  wrapper.py
src/mlship/server/: __init__.py  app.py  cloud_app.py  dashboard_routes.py  loader.py
src/mlship/templates/: index.html
src/mlship/ui/dashboard/: app.js  index.html
src/mlship/ui/static/: style.css
src/mlship/ui/static/js/: app.js
src/mlship/ui/static/js/cloud/: app.js
src/mlship/ui/static/js/dashboard/: app.js
src/mlship/ui/templates/: cloud.html  dashboard.html  index.html
src/mlship/utils/: __init__.py  config.py  constants.py  create_test_model.py  daemon.py  model_architectures.py
test_models/: model.h5  model.model  model.onnx  model.pt  model.safetensors  model.tflite  pytorch_image_classifier.pth  pytorch_image_classifier_arch.json  pytorch_regression.pt  pytorch_regression_arch.json  simple_model.onnx  tensorflow_text_classifier.h5
test_models/hf_model/: config.json
test_models/huggingface_text_classifier/: config.json
test_models/saved_model/: fingerprint.pb  saved_model.pb
test_models/saved_model/variables/: variables.data-00000-of-00001  variables.index
test_models/tensorflow_timeseries/: fingerprint.pb  saved_model.pb
test_models/tensorflow_timeseries/variables/: variables.data-00000-of-00001  variables.index
tests/: test_mlship.py
