[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlship"
version = "0.1.0"
description = "Simple ML Model Deployment"
authors = [
    {name = "Luqman Zaceria", email = "luqmanzaceria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.5",
    "scipy>=1.6.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.2.0",
    "threadpoolctl>=3.1.0",
    "click>=8.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "boto3>=1.18.0",
    "pyyaml>=5.4.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "httpx>=0.18.0"
]

[project.scripts]
mlship = "mlship.cli:cli"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]