[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlship"
version = "0.1.0"
description = "A tool for deploying ML models"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "psutil",
    "scikit-learn",
    "numpy",
    "joblib",
    "boto3",
    "python-multipart",
    "pillow",
    "torch",
    "torchvision",
    "transformers",
    "click",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-cov",
]

[project.scripts]
mlship = "mlship.cli:main"